force-app/main/default/objects/Inventory__c/fields/Civil_Work__c.field-meta.xml
<CustomField>
    <fullName>Civil_Work__c</fullName>
    <label>Civil Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>