force-app/main/default/objects/Inventory__c/fields/Classification_Type__c.field-meta.xml
<CustomField>
    <fullName>Classification_Type__c</fullName>
    <label>Classification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Non-Prime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>