force-app/main/default/objects/Inventory__c/fields/Cluster_Phase__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Phase__c</fullName>
    <label>Cluster/Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>