force-app/main/default/objects/Inventory__c/fields/Collection_Release_Reject_Comment__c.field-meta.xml
<CustomField>
    <fullName>Collection_Release_Reject_Comment__c</fullName>
    <label>Collection Release Reject Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>