force-app/main/default/objects/Inventory__c/fields/Commission_Cap__c.field-meta.xml
<CustomField>
    <fullName>Commission_Cap__c</fullName>
    <label>COMMISSION CAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>