force-app/main/default/objects/Inventory__c/fields/COMMON_AREA_SQFT__c.field-meta.xml
<CustomField>
    <fullName>COMMON_AREA_SQFT__c</fullName>
    <label>Common Area (Sqft)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>