force-app/main/default/objects/Inventory__c/fields/Compass_Direction__c.field-meta.xml
<CustomField>
    <fullName>Compass_Direction__c</fullName>
    <label>Compass Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>