force-app/main/default/objects/Inventory__c/fields/Construction_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Construction_Completion_Date__c</fullName>
    <description>to capture the plot construction completion date from the customer on resell land form and will be copied here when case account for seller is verified</description>
    <label>Construction Completion Date</label>
    <type>Date</type>
</CustomField>