force-app/main/default/objects/Inventory__c/fields/Construction_Completion_Date_Ar__c.field-meta.xml
<CustomField>
    <fullName>Construction_Completion_Date_Ar__c</fullName>
    <label>Construction Completion Date Ar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>