force-app/main/default/objects/Inventory__c/fields/Construction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Construction_Start_Date__c</fullName>
    <description>to capture the plot construction start date filled by the customer on resell land form and will be copied here when case account is verified</description>
    <label>Construction Start Date</label>
    <type>Date</type>
</CustomField>