force-app/main/default/objects/Inventory__c/fields/Construction_Status__c.field-meta.xml
<CustomField>
    <fullName>Construction_Status__c</fullName>
    <label>Construction Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Third Party Developer</fullName>
            </value>
            <value>
                <fullName>Under Development</fullName>
            </value>
            <value>
                <fullName>Developed</fullName>
            </value>
            <value>
                <fullName>Not Developed</fullName>
            </value>
            <value>
                <fullName>Construction Commenced</fullName>
            </value>
            <value>
                <fullName>Construction Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>