force-app/main/default/objects/Inventory__c/fields/CREDIT_CARD_BANK_ACCOUNT_NO__c.field-meta.xml
<CustomField>
    <fullName>CREDIT_CARD_BANK_ACCOUNT_NO__c</fullName>
    <label>Credit Card Bank Account No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>