force-app/main/default/objects/Inventory__c/fields/CREDIT_CARD_BANK_BRANCH__c.field-meta.xml
<CustomField>
    <fullName>CREDIT_CARD_BANK_BRANCH__c</fullName>
    <label>Credit Card Bank Branch</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>