force-app/main/default/objects/Inventory__c/fields/CREDIT_CARD_BANK_NAME__c.field-meta.xml
<CustomField>
    <fullName>CREDIT_CARD_BANK_NAME__c</fullName>
    <label>Credit Card Bank Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>