force-app/main/default/objects/Inventory__c/fields/Current_anticipated_handover_date__c.field-meta.xml
<CustomField>
    <fullName>Current_anticipated_handover_date__c</fullName>
    <label>Current anticipated handover date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>