force-app/main/default/objects/Inventory__c/fields/Custom_Payment_Plan_Price__c.field-meta.xml
<CustomField>
    <fullName>Custom_Payment_Plan_Price__c</fullName>
    <label>Custom Payment Plan Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>