force-app/main/default/objects/Inventory__c/fields/DaysTobeBlocked__c.field-meta.xml
<CustomField>
    <fullName>DaysTobeBlocked__c</fullName>
    <label>SC Days Blocked</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>