force-app/main/default/objects/Inventory__c/fields/Default_Date__c.field-meta.xml
<CustomField>
    <fullName>Default_Date__c</fullName>
    <description>Created for Nexus migration, To capture Trigger Default Date from NKL system</description>
    <label>Trigger Default Date</label>
    <type>Date</type>
</CustomField>