force-app/main/default/objects/Inventory__c/fields/Default_Receipt_GLCode__c.field-meta.xml
<CustomField>
    <fullName>Default_Receipt_GLCode__c</fullName>
    <label>Default_Receipt_GLCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>