force-app/main/default/objects/Inventory__c/fields/Developed_By__c.field-meta.xml
<CustomField>
    <fullName>Developed_By__c</fullName>
    <label>Developed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>