force-app/main/default/objects/Inventory__c/fields/Development_Status__c.field-meta.xml
<CustomField>
    <fullName>Development_Status__c</fullName>
    <label>Development Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Developed</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Undeveloped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>