force-app/main/default/objects/Inventory__c/fields/DEWA_Premise_Number__c.field-meta.xml
<CustomField>
    <fullName>DEWA_Premise_Number__c</fullName>
    <description>Created for Nexus migration, To capture DEWA Premise Number from NKL system</description>
    <label>DEWA Premise Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>