force-app/main/default/objects/Inventory__c/fields/Disclosure_Statement_Pages_Count__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Statement_Pages_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Disclosure Statement Pages Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>