force-app/main/default/objects/Inventory__c/fields/District_Cooling_Load_TR__c.field-meta.xml
<CustomField>
    <fullName>District_Cooling_Load_TR__c</fullName>
    <label>District Cooling Load (TR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>