force-app/main/default/objects/Inventory__c/fields/DLD_Land_Property_Id__c.field-meta.xml
<CustomField>
    <fullName>DLD_Land_Property_Id__c</fullName>
    <label>DLD Land Property Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>