force-app/main/default/objects/Inventory__c/fields/DLP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DLP_End_Date__c</fullName>
    <label>DLP End Date</label>
    <type>Date</type>
</CustomField>