force-app/main/default/objects/Inventory__c/fields/DLP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DLP_Start_Date__c</fullName>
    <label>DLP Start Date</label>
    <type>Date</type>
</CustomField>