force-app/main/default/objects/Inventory__c/fields/DLP_Valid__c.field-meta.xml
<CustomField>
    <fullName>DLP_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DLP Valid</label>
    <type>Checkbox</type>
</CustomField>