force-app/main/default/objects/Inventory__c/fields/DM_Affection_Plan_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Affection_Plan_Issue_Date__c</fullName>
    <label>DM Affection Plan Issue Date</label>
    <type>Date</type>
</CustomField>