force-app/main/default/objects/Inventory__c/fields/DM_Drainage_Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Drainage_Connection_Status__c</fullName>
    <label>DM Drainage Connection Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>