force-app/main/default/objects/Inventory__c/fields/DM_Parcel__c.field-meta.xml
<CustomField>
    <fullName>DM_Parcel__c</fullName>
    <label>DM Parcel #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>