force-app/main/default/objects/Inventory__c/fields/DM_Parcel_Area_sqft__c.field-meta.xml
<CustomField>
    <fullName>DM_Parcel_Area_sqft__c</fullName>
    <label>DM Parcel Area (sqft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>