force-app/main/default/objects/Inventory__c/fields/DM_Parcel_Area_sqm__c.field-meta.xml
<CustomField>
    <fullName>DM_Parcel_Area_sqm__c</fullName>
    <label>DM Parcel Area (sqm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>