force-app/main/default/objects/Inventory__c/fields/DM_Sewage_NOC__c.field-meta.xml
<CustomField>
    <fullName>DM_Sewage_NOC__c</fullName>
    <label>DM Sewage NOC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>