force-app/main/default/objects/Inventory__c/fields/Drawing_Link__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Link__c</fullName>
    <label>Drawing Link</label>
    <length>35</length>
    <type>Text</type>
</CustomField>