force-app/main/default/objects/Inventory__c/fields/Emirates__c.field-meta.xml
<CustomField>
    <fullName>Emirates__c</fullName>
    <label>Emirates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>