force-app/main/default/objects/Inventory__c/fields/Employee_Population_sqm__c.field-meta.xml
<CustomField>
    <fullName>Employee_Population_sqm__c</fullName>
    <label>Employee Population (sqm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>