force-app/main/default/objects/Inventory__c/fields/EOI_User__c.field-meta.xml
<CustomField>
    <fullName>EOI_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOI User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory8</relationshipName>
    <type>Lookup</type>
</CustomField>