force-app/main/default/objects/Inventory__c/fields/ERP_Assignable_Area__c.field-meta.xml
<CustomField>
    <fullName>ERP_Assignable_Area__c</fullName>
    <description>Field used in pricing calculation.</description>
    <label>ERP Assignable Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>