force-app/main/default/objects/Inventory__c/fields/ERP_Property_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Property_Code__c</fullName>
    <label>ERP Property Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>