force-app/main/default/objects/Inventory__c/fields/ERP_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Unit_Id__c</fullName>
    <description>Created for Nexus migration, To capture ERP Unit Id from NKL system</description>
    <label>ERP Unit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>