force-app/main/default/objects/Inventory__c/fields/ERP_Usable_Area__c.field-meta.xml
<CustomField>
    <fullName>ERP_Usable_Area__c</fullName>
    <label>ERP Usable Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>