force-app/main/default/objects/Inventory__c/fields/Error_Message_Yardi__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_Yardi__c</fullName>
    <label>Error Message (Yardi)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>