force-app/main/default/objects/Inventory__c/fields/Escrow_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Account_Code__c</fullName>
    <description>Capture the Owner code information from Yardi</description>
    <label>Escrow Account Code</label>
    <length>150</length>
    <type>Text</type>
</CustomField>