force-app/main/default/objects/Inventory__c/fields/Escrow_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Account_Id__c</fullName>
    <description>Field to track the corresponding database id from Yardi SQL database</description>
    <label>Escrow Account Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>