force-app/main/default/objects/Inventory__c/fields/Escrow_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Account_Name__c</fullName>
    <label>Escrow Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>