force-app/main/default/objects/Inventory__c/fields/Exclude_Fusion_Interface__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Fusion_Interface__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box is implemented to mark it true when we dont want inventories FT to be posted to Oracle Fusion</description>
    <label>Exclude Fusion Interface</label>
    <type>Checkbox</type>
</CustomField>