force-app/main/default/objects/Inventory__c/fields/Exclude_unit_from_inventory_report__c.field-meta.xml
<CustomField>
    <fullName>Exclude_unit_from_inventory_report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude unit from inventory report</label>
    <type>Checkbox</type>
</CustomField>