force-app/main/default/objects/Inventory__c/fields/ExemptBlocking__c.field-meta.xml
<CustomField>
    <fullName>ExemptBlocking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt Blocking</label>
    <type>Checkbox</type>
</CustomField>