force-app/main/default/objects/Inventory__c/fields/Expiry_Date_Affection_Plan__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Affection_Plan__c</fullName>
    <label>Expiry Date - Affection Plan</label>
    <type>Date</type>
</CustomField>