force-app/main/default/objects/Inventory__c/fields/FA_Accounted_For__c.field-meta.xml
<CustomField>
    <fullName>FA_Accounted_For__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounted For</label>
    <type>Checkbox</type>
</CustomField>