force-app/main/default/objects/Inventory__c/fields/FA_Approved_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>FA_Approved_Exceptions__c</fullName>
    <label>Approved Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>