force-app/main/default/objects/Inventory__c/fields/FA_DeMerge__c.field-meta.xml
<CustomField>
    <fullName>FA_DeMerge__c</fullName>
    <label>DeMerge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DeMerge 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>