force-app/main/default/objects/Inventory__c/fields/FA_Disposed__c.field-meta.xml
<CustomField>
    <fullName>FA_Disposed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disposed?</label>
    <type>Checkbox</type>
</CustomField>