force-app/main/default/objects/Inventory__c/fields/FA_Exclude__c.field-meta.xml
<CustomField>
    <fullName>FA_Exclude__c</fullName>
    <label>Exclude</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Report only</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>