force-app/main/default/objects/Inventory__c/fields/FA_Fair_Value__c.field-meta.xml
<CustomField>
    <fullName>FA_Fair_Value__c</fullName>
    <label>Fair Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>