force-app/main/default/objects/Inventory__c/fields/FA_Grant_Date__c.field-meta.xml
<CustomField>
    <fullName>FA_Grant_Date__c</fullName>
    <label>Grant Date</label>
    <type>Date</type>
</CustomField>