force-app/main/default/objects/Inventory__c/fields/FA_Infra_construction_cost__c.field-meta.xml
<CustomField>
    <fullName>FA_Infra_construction_cost__c</fullName>
    <label>Infra construction cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>