force-app/main/default/objects/Inventory__c/fields/FA_Infrastructure_Cost_Allocation__c.field-meta.xml
<CustomField>
    <fullName>FA_Infrastructure_Cost_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infrastructure Cost Allocation</label>
    <type>Checkbox</type>
</CustomField>