force-app/main/default/objects/Inventory__c/fields/FA_Infrastructure_Obligation__c.field-meta.xml
<CustomField>
    <fullName>FA_Infrastructure_Obligation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infrastructure Obligation?</label>
    <type>Checkbox</type>
</CustomField>