force-app/main/default/objects/Inventory__c/fields/FA_Land_Area_SqFt__c.field-meta.xml
<CustomField>
    <fullName>FA_Land_Area_SqFt__c</fullName>
    <label>Land Area Sq Ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>