force-app/main/default/objects/Inventory__c/fields/FA_Land_Cost__c.field-meta.xml
<CustomField>
    <fullName>FA_Land_Cost__c</fullName>
    <label>Land Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>