force-app/main/default/objects/Inventory__c/fields/FA_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>FA_Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>AR_Legal_Entity__c</referenceTo>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>