force-app/main/default/objects/Inventory__c/fields/FA_Merged__c.field-meta.xml
<CustomField>
    <fullName>FA_Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merged?</label>
    <type>Checkbox</type>
</CustomField>