force-app/main/default/objects/Inventory__c/fields/FA_Notes__c.field-meta.xml
<CustomField>
    <fullName>FA_Notes__c</fullName>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>