force-app/main/default/objects/Inventory__c/fields/FA_Null_Book_Value__c.field-meta.xml
<CustomField>
    <fullName>FA_Null_Book_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Null Book Value</label>
    <type>Checkbox</type>
</CustomField>