force-app/main/default/objects/Inventory__c/fields/FA_Parent_Inventory__c.field-meta.xml
<CustomField>
    <fullName>FA_Parent_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>