force-app/main/default/objects/Inventory__c/fields/FA_Podium_Min_Front_Side_1_Setback_mt__c.field-meta.xml
<CustomField>
    <fullName>FA_Podium_Min_Front_Side_1_Setback_mt__c</fullName>
    <label>Podium Min Front Side 1 Setback mt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>