force-app/main/default/objects/Inventory__c/fields/FA_Podium_Min_Rear_Side_3_Setback_mt__c.field-meta.xml
<CustomField>
    <fullName>FA_Podium_Min_Rear_Side_3_Setback_mt__c</fullName>
    <label>Podium Min Rear Side 3 Setback mt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>