force-app/main/default/objects/Inventory__c/fields/FA_Podium_Min_Side4_Setback_mt__c.field-meta.xml
<CustomField>
    <fullName>FA_Podium_Min_Side4_Setback_mt__c</fullName>
    <label>Podium Min Side4 Setback mt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>