force-app/main/default/objects/Inventory__c/fields/FA_Purchase_Type__c.field-meta.xml
<CustomField>
    <fullName>FA_Purchase_Type__c</fullName>
    <label>Purchase Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government Grant</fullName>
            </value>
            <value>
                <fullName>Outside Parties</fullName>
            </value>
            <value>
                <fullName>Outside Parties - Related parties</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>